tests/integration/snapshots/integration__conformance__n_structure_unclosed_array_partial_null.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[ false, nul
stderr ---
error: unexpected character `n`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, nul
  |          ^
